--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html data-theme="light" lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="/images/svg+xml" href="/images/fit-life-hub-title-logo.png" />
